PRJ_VER=0.4.0
SUMMARY=
BODHI_UPDATE_TYPE=bugfix
REDHAT_BUGZILLA=
[Changes]
- ./Module should precedes /usr/share/cmake/Modules, so
  it always use latest modules.
- Fixed: Reading a file that contains '\'.
