@@ -5,5 +5,7 @@ REDHAT_BUGZILLA=
 [Changes]
 - ./Module should precedes /usr/share/cmake/Modules, so
   it always use latest modules.
-- Fixed: Reading a file that contains '\'.
+- Fixed Reading a file that contains '\'.
+- Added Macro PACK_RPM_GET_ARCH
+- Added target install_rpms for bulk rpms installation
 
